# gpgme-sequoia-shim

./: Cargo.toml  README.md  build.rs
lib/: gpgme-sq.map
src/: api.rs  context.rs  crypto.rs  data.rs  error.rs  ffi_types.rs  global.rs  keygen.rs  keyring.rs  lib.rs
src/api/: ctx.rs  data.rs  engine.rs  import_export.rs  keys.rs  misc.rs  ops.rs  stubs.rs
src/crypto/: decrypt.rs  encrypt.rs  sign.rs  verify.rs
