[package]
name    = "gpgme-sequoia-shim"
version = "0.3.0"
repository = "https://github.com/fuchskurt/gpgme-sequoia-shim"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
name       = "gpgme_sequoia_shim"
crate-type = ["cdylib"]
path       = "src/lib.rs"

[dependencies]
sequoia-openpgp = { version = "2", default-features = false, features = [
    "crypto-rust",
    "allow-experimental-crypto",
    "allow-variable-time-crypto",
    "compression-deflate",
    "compression-bzip2",
] }
libc             = "0.2"

[workspace]

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = 1 }
pedantic = { level = "deny", priority = 1 }
restriction = { level = "deny", priority = 1 }
nursery = { level = "deny", priority = 1 }
blanket_clippy_restriction_lints = { level = "allow", priority = 2 }
future_not_send = { level = "allow", priority = 2 }
implicit_return = { level = "allow", priority = 2 }
separated_literal_suffix = { level = "allow", priority = 2 }
single_call_fn = { level = "allow", priority = 2 }
self_named_module_files = { level = "allow", priority = 2 }
pub_with_shorthand = { level = "allow", priority = 2 }
pub_use = { level = "allow", priority = 2 }

[lints]
workspace = true

[profile.release]
strip         = true
lto           = "fat"
codegen-units = 1
opt-level     = 3
